--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "soft-delete-plugin-mongoose": "^1.0.15"
   }
 }
